add name and phone number for bill save user address get voucher of user